# libvhdi

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.macosx  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libvhdi-wiki.ini  libvhdi.ini  libvhdi.nuspec  libvhdi.pc.in  libvhdi.spec.in  pyproject.toml.in  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  synctestdata.ps1  synctestdata.sh  tox.ini
.travis/: runtests.sh  (+2 more)
include/: Makefile.am  libvhdi.h.in
include/libvhdi/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfguid/: Makefile.am  libfguid_definitions.h  libfguid_error.c  libfguid_error.h  libfguid_extern.h  libfguid_identifier.c  libfguid_identifier.h  libfguid_libcerror.h  libfguid_libcstring.h  libfguid_support.c  libfguid_support.h  libfguid_types.h  libfguid_unused.h
libvhdi/: Makefile.am  libvhdi.c  libvhdi.rc.in  libvhdi_block_allocation_table.c  libvhdi_block_allocation_table.h  libvhdi_block_descriptor.c  libvhdi_block_descriptor.h  libvhdi_block_table.c  libvhdi_block_table.h  libvhdi_checksum.c  libvhdi_checksum.h  libvhdi_codepage.h  libvhdi_data_block.c  libvhdi_data_block.h  libvhdi_debug.c  libvhdi_debug.h  libvhdi_definitions.h  libvhdi_definitions.h.in  libvhdi_dynamic_disk_header.c  libvhdi_dynamic_disk_header.h  libvhdi_error.c  libvhdi_error.h  libvhdi_extern.h  libvhdi_file.c  libvhdi_file.h  libvhdi_file_footer.c  libvhdi_file_footer.h  libvhdi_file_information.c  libvhdi_file_information.h  libvhdi_i18n.c  libvhdi_i18n.h  libvhdi_image_header.c  libvhdi_image_header.h  libvhdi_io_handle.c  libvhdi_io_handle.h  libvhdi_libbfio.h  libvhdi_libcdata.h  libvhdi_libcerror.h  libvhdi_libclocale.h  libvhdi_libcnotify.h  (+47 more)
macosx/: Introduction.rtf.in  License.rtf  Makefile.am  Readme.rtf
macosx/libvhdi.pmdoc/: 01bin.xml.in  02include.xml.in  03lib.xml.in  04share.xml.in  05python.xml.in  index.xml.in
msvscpp/: Makefile.am  libvhdi.sln
msvscpp/dokan/: dokan.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libvhdi/: libvhdi.vcproj
msvscpp/libvhdi_dll/: libvhdi_dll.vcproj
msvscpp/pyvhdi/: pyvhdi.vcproj
msvscpp/vhdi_test_block_allocation_table/: vhdi_test_block_allocation_table.vcproj
msvscpp/vhdi_test_block_descriptor/: vhdi_test_block_descriptor.vcproj
msvscpp/vhdi_test_block_table/: vhdi_test_block_table.vcproj
msvscpp/vhdi_test_checksum/: vhdi_test_checksum.vcproj
msvscpp/vhdi_test_data_block/: vhdi_test_data_block.vcproj
msvscpp/vhdi_test_dynamic_disk_header/: vhdi_test_dynamic_disk_header.vcproj
msvscpp/vhdi_test_error/: vhdi_test_error.vcproj
msvscpp/vhdi_test_file/: vhdi_test_file.vcproj
msvscpp/vhdi_test_file_footer/: vhdi_test_file_footer.vcproj
msvscpp/vhdi_test_file_information/: vhdi_test_file_information.vcproj
msvscpp/vhdi_test_get_version/: vhdi_test_get_version.vcproj
msvscpp/vhdi_test_image_header/: vhdi_test_image_header.vcproj
msvscpp/vhdi_test_io_handle/: vhdi_test_io_handle.vcproj
msvscpp/vhdi_test_metadata_table/: vhdi_test_metadata_table.vcproj
msvscpp/vhdi_test_metadata_table_entry/: vhdi_test_metadata_table_entry.vcproj
msvscpp/vhdi_test_metadata_table_header/: vhdi_test_metadata_table_header.vcproj
msvscpp/vhdi_test_metadata_values/: vhdi_test_metadata_values.vcproj
msvscpp/vhdi_test_notify/: vhdi_test_notify.vcproj
msvscpp/vhdi_test_open_close/: vhdi_test_open_close.vcproj
msvscpp/vhdi_test_parent_locator/: vhdi_test_parent_locator.vcproj
msvscpp/vhdi_test_parent_locator_entry/: vhdi_test_parent_locator_entry.vcproj
msvscpp/vhdi_test_parent_locator_header/: vhdi_test_parent_locator_header.vcproj
msvscpp/vhdi_test_read/: vhdi_test_read.vcproj
msvscpp/vhdi_test_region_table/: vhdi_test_region_table.vcproj
msvscpp/vhdi_test_region_table_entry/: vhdi_test_region_table_entry.vcproj
msvscpp/vhdi_test_region_table_header/: vhdi_test_region_table_header.vcproj
msvscpp/vhdi_test_sector_range_descriptor/: vhdi_test_sector_range_descriptor.vcproj
pyvhdi/: Makefile.am  pyvhdi.c  pyvhdi.h  pyvhdi_disk_types.c  pyvhdi_disk_types.h  pyvhdi_error.c  pyvhdi_error.h  pyvhdi_file.c  pyvhdi_file.h  pyvhdi_file_object_io_handle.c  pyvhdi_file_object_io_handle.h  pyvhdi_guid.c  pyvhdi_guid.h  pyvhdi_integer.c  pyvhdi_integer.h  pyvhdi_libbfio.h  pyvhdi_libcerror.h  pyvhdi_libclocale.h  pyvhdi_libcstring.h  pyvhdi_libfguid.h  pyvhdi_libvhdi.h  pyvhdi_metadata.c  pyvhdi_metadata.h  pyvhdi_python.h  pyvhdi_unused.h  setup.py.in
pyvhdi-python2/: Makefile.am
tests/: Makefile.am  atlocal.in  pkgbuild.sh  pyvhdi_test_file.py  pyvhdi_test_get_version.py  pyvhdi_test_open_close.py  pyvhdi_test_read.py  pyvhdi_test_seek.py  pyvhdi_test_support.py  runtests.py  runtests.sh  syncsharedlibs.sh  test_api_functions.sh  test_api_types.ps1  test_api_types.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at  test_open_close.sh  test_python_functions.sh  test_python_module.at  test_python_module.sh  test_pyvhdi_open_close.sh  test_pyvhdi_seek.sh  test_read.sh  test_runner.sh  test_seek.sh  test_tools.at  test_tools.ps1  test_tools.sh  test_vhdiinfo.ps1  test_vhdiinfo.sh  vhdi_test_block_allocation_table.c  vhdi_test_block_descriptor.c  vhdi_test_block_table.c  vhdi_test_checksum.c  vhdi_test_data_block.c  vhdi_test_dynamic_disk_header.c  vhdi_test_error.c  (+43 more)
vhditools/: Makefile.am  byte_size_string.c  byte_size_string.h  info_handle.c  info_handle.h  mount_dokan.c  mount_dokan.h  mount_file_entry.c  mount_file_entry.h  mount_file_system.c  mount_file_system.h  mount_fuse.c  mount_fuse.h  mount_handle.c  mount_handle.h  vhdiinfo  vhdiinfo.c  vhdimount  vhdimount.c  vhdioutput.c  vhdioutput.h  vhditools_getopt.c  vhditools_getopt.h  vhditools_i18n.h  vhditools_libbfio.h  vhditools_libcdata.h  vhditools_libcerror.h  vhditools_libclocale.h  vhditools_libcnotify.h  vhditools_libcpath.h  vhditools_libcstring.h  vhditools_libcsystem.h  vhditools_libfguid.h  vhditools_libuna.h  vhditools_libvhdi.h  vhditools_output.c  vhditools_output.h  vhditools_signal.c  vhditools_signal.h  vhditools_unused.h
(+88 files in other folders)
