include_HEADERS = \
	libvhdi.h

pkginclude_HEADERS = \
	libvhdi/codepage.h \
	libvhdi/definitions.h \
	libvhdi/error.h \
	libvhdi/extern.h \
	libvhdi/features.h \
	libvhdi/types.h

EXTRA_DIST = \
	libvhdi.h.in \
	libvhdi/definitions.h.in \
	libvhdi/features.h.in \
	libvhdi/types.h.in

DISTCLEANFILES = \
	libvhdi.h \
	libvhdi/definitions.h \
	libvhdi/features.h \
	libvhdi/types.h \
	Makefile \
	Makefile.in

