EXTRA_DIST = \
	libvhdi.pmdoc/01bin.xml.in \
	libvhdi.pmdoc/01bin-contents.xml \
	libvhdi.pmdoc/02include.xml.in \
	libvhdi.pmdoc/02include-contents.xml \
	libvhdi.pmdoc/03lib.xml.in \
	libvhdi.pmdoc/03lib-contents.xml \
	libvhdi.pmdoc/04share.xml.in \
	libvhdi.pmdoc/04share-contents.xml \
	libvhdi.pmdoc/05python.xml.in \
	libvhdi.pmdoc/05python-contents.xml \
	libvhdi.pmdoc/index.xml \
	libvhdi.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libvhdi.pmdoc/01bin.xml
	/bin/rm -f libvhdi.pmdoc/02include.xml
	/bin/rm -f libvhdi.pmdoc/03lib.xml
	/bin/rm -f libvhdi.pmdoc/04share.xml
	/bin/rm -f libvhdi.pmdoc/05python.xml
	/bin/rm -f libvhdi.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

