MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfguid/libfguid.vcproj \
	libuna/libuna.vcproj \
	libvhdi/libvhdi.vcproj \
	pyvhdi/pyvhdi.vcproj \
	vhdi_test_block_table/vhdi_test_block_table.vcproj \
	vhdi_test_data_block/vhdi_test_data_block.vcproj \
	vhdi_test_dynamic_disk_header/vhdi_test_dynamic_disk_header.vcproj \
	vhdi_test_error/vhdi_test_error.vcproj \
	vhdi_test_file/vhdi_test_file.vcproj \
	vhdi_test_file_footer/vhdi_test_file_footer.vcproj \
	vhdi_test_io_handle/vhdi_test_io_handle.vcproj \
	vhdi_test_notify/vhdi_test_notify.vcproj \
	vhdi_test_support/vhdi_test_support.vcproj \
	vhdi_test_tools_output/vhdi_test_tools_output.vcproj \
	vhdi_test_tools_signal/vhdi_test_tools_signal.vcproj \
	vhdiinfo/vhdiinfo.vcproj \
	vhdimount/vhdimount.vcproj \
	libvhdi.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

